--- a/index.html
+++ b/index.html
@@ -1,51 +1,105 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Faber - Home</title>
-<link rel="stylesheet" href="styles.css">
-<link rel="icon" href="favicon.png">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Oikos Tech Services — Expert Care for Kitchen Appliances &amp; Home Power Systems</title>
+  <meta name="description" content="Oikos Tech provides specialized repair and maintenance for kitchen appliances (chimneys, induction cookers, gas hobs, gas stoves), CCTV systems, water purifiers, and inverters. We do not service ACs, TVs, refrigerators, or computers. Our trained technicians deliver reliable repairs, genuine parts, clear estimates and warranty-backed service." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<div data-inject="header"></div>
 
-<main class="container">
-  <section class="hero">
+<header class="site-header">
+  <div class="container header-inner">
+    <div class="brand">
+      <a href="index.html"><img src="logo.png" alt="Oikos Tech logo" class="logo" /></a>
+      <div class="brand-text">
+        <h1>Oikos Tech Services</h1>
+        <p class="sub">Home appliance repairs & service</p>
+      </div>
+    </div>
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="book.html">Book</a>
+      <a href="feedback.html">Feedback</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <div class="header-actions">
+      <a class="call" href="tel:+91-8606132128">+91-8606132128</a>
+      <a class="btn" href="book.html">Book Service</a>
+    </div>
+  </div>
+</header>
+
+<main>
+  <section class="hero container hero-inner">
     <div class="hero-copy">
-      <p style="color:var(--green);font-weight:700;margin:0">Authorized Faber Service</p>
-      <h2>Same-day repairs — Genuine parts — Certified technicians</h2>
-      <p class="lead">Fast, transparent appliance repairs for Attingal & Trivandrum. Book online or call us directly.</p>
-      <p style="margin-top:18px">
-        <a class="btn" href="/booking.html">Book a Technician</a>
-        <a class="nav-link" href="/services.html" style="background:transparent;border-radius:8px">See Services</a>
-      </p>
-      <ul style="list-style:none;padding:0;margin-top:18px;color:var(--muted)">
-        <li>📍 B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</li>
-        <li>📞 <a href="tel:+91-8606132128">+91-8606132128</a></li>
+      <p class="eyebrow">Premium Appliance Service</p>
+      <h2>Expert Care for Kitchen Appliances &amp; Home Power Systems</h2>
+      <p class="lead">Oikos Tech provides specialized repair and maintenance for kitchen appliances (chimneys, induction cookers, gas hobs, gas stoves), CCTV systems, water purifiers, and inverters. We do not service ACs, TVs, refrigerators, or computers. Our trained technicians deliver reliable repairs, genuine parts, clear estimates and warranty-backed service.</p>
+      <div style="margin-top:12px" class="cta-row">
+        <a class="btn" href="book.html">Book a Technician</a>
+        <a class="btn" href="contact.html" style="background:transparent;color:var(--primary-green);border:1px solid rgba(12,80,55,0.08);margin-left:10px">Contact Us</a>
+      </div>
+      <ul class="trust-list" style="margin-top:16px">
+        <li>Genuine parts & transparent pricing</li>
+        <li>Trained & certified technicians</li>
+        <li>Parts warranty & service guarantee</li>
       </ul>
     </div>
-    <aside class="card" style="min-width:320px">
-      <h3>Quick actions</h3>
-      <div style="display:flex;flex-direction:column;gap:8px">
-        <a class="nav-link" href="/contact.html">Contact</a>
-        <a class="nav-link" href="/booking.html">Book Now</a>
-        <a class="nav-link" href="/complaints.html">File Complaint</a>
+
+    <aside class="hero-card card form-card">
+      <h3>Quick Contact</h3>
+      <p style="margin:6px 0"><strong>+91-8606132128</strong></p>
+      <p class="small muted" style="margin:6px 0">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</p>
+      <div style="margin-top:10px">
+        <a class="btn" href="tel:+91-8606132128">Call Now</a>
+        <a class="btn" href="book.html" style="margin-left:8px">Book</a>
       </div>
+      <p class="small" style="margin-top:10px">We service kitchen appliances, CCTV, water purifiers & inverters. We do not service ACs, TVs, fridges or computers.</p>
     </aside>
   </section>
 
-  <section style="margin-top:24px">
-    <div class="section-title"><h3>Our Services</h3><a href="/services.html">View all</a></div>
-    <div class="grid" style="margin-top:12px">
-      <div class="card"><h4>Chimney Repair & Maintenance</h4><p class="muted">Motor replacement, filters, suction issues.</p></div>
-      <div class="card"><h4>Gas Hob Service</h4><p class="muted">Ignition, burners, installation.</p></div>
-      <div class="card"><h4>Water Heater</h4><p class="muted">Geyser element, thermostat, plumbing checks.</p></div>
-      <div class="card"><h4>Oven & Built-ins</h4><p class="muted">Electrical, sensors, calibration.</p></div>
+  <section class="section container">
+    <h3>Services We Offer</h3>
+    <div class="services-grid">
+      <div class="card"><h4>Chimney Repair & Maintenance</h4><p class="muted">Motor replacement, filter change, suction and vent fixes.</p></div>
+      <div class="card"><h4>Induction & Gas Cooktops</h4><p class="muted">Induction cooker repair, gas hob and gas stove service and installation.</p></div>
+      <div class="card"><h4>CCTV Systems</h4><p class="muted">CCTV installation, DVR/NVR troubleshooting and camera replacement.</p></div>
+      <div class="card"><h4>Water Purifiers</h4><p class="muted">Filter replacement, RO service, leakage & water quality checks.</p></div>
+      <div class="card"><h4>Inverters & Power Systems</h4><p class="muted">Inverter diagnostics, battery checks and maintenance.</p></div>
+    </div>
+  </section>
+
+  <section class="section container card">
+    <h3>How We Work</h3>
+    <div class="kv" style="margin-top:12px">
+      <div class="item"><strong>1.</strong> Book online or call</div>
+      <div class="item"><strong>2.</strong> Technician visit & diagnosis</div>
+      <div class="item"><strong>3.</strong> Repair with genuine parts</div>
+      <div class="item"><strong>4.</strong> Invoice & warranty</div>
+    </div>
+  </section>
+
+  <section class="section container">
+    <h3>Customer Actions</h3>
+    <div style="display:flex;gap:12px;flex-wrap:wrap">
+      <a class="btn form-link" href="https://forms.gle/2g4Q3BgvCCnAi8x26" target="_blank">Open Booking Form</a>
+      <a class="btn" href="services.html">View Services</a>
+      <a class="btn" href="https://forms.gle/MoZWDVAmF2wmEDCK8" target="_blank" style="background:#D9A441;color:#fff">Leave Feedback</a>
+      <a class="btn" href="contact.html" style="background:transparent;color:var(--primary-green);border:1px solid rgba(12,80,55,0.08)">Location & Contact</a>
     </div>
   </section>
 </main>
 
-<div data-inject="footer"></div>
-<script src="nav.js"></script>
+<footer class="site-footer">
+  <div class="container footer-inner">
+    <div>© 2025 Oikos Tech Services</div>
+    <div class="muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104 • <a href="tel:+91-8606132128">+91-8606132128</a></div>
+  </div>
+</footer>
+
+<script src="scripts.js"></script>
 </body>
 </html>
