--- a/contact.html
+++ b/contact.html
@@ -1,29 +1,52 @@
-<!doctype html>
-<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Faber - Contact</title><link rel="stylesheet" href="styles.css"></head><body>
-<div data-inject="header"></div>
-<main class="container">
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Contact - Oikos Tech Services</title><link rel="stylesheet" href="styles.css"/></head><body>
+
+<header class="site-header">
+  <div class="container header-inner">
+    <div class="brand">
+      <a href="index.html"><img src="logo.png" alt="Oikos Tech logo" class="logo" /></a>
+      <div class="brand-text">
+        <h1>Oikos Tech Services</h1>
+        <p class="sub">Home appliance repairs & service</p>
+      </div>
+    </div>
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="book.html">Book</a>
+      <a href="feedback.html">Feedback</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <div class="header-actions">
+      <a class="call" href="tel:+91-8606132128">+91-8606132128</a>
+      <a class="btn" href="book.html">Book Service</a>
+    </div>
+  </div>
+</header>
+
+<main class="container section">
   <h2>Contact & Location</h2>
-  <p>Reach us by phone or use the contact form below.</p>
-  <div style="display:grid;grid-template-columns:1fr 360px;gap:12px;align-items:start;margin-top:12px">
+  <div style="display:grid;grid-template-columns:1fr 360px;gap:18px;align-items:start">
     <div class="card">
-      <h4>Contact Form</h4>
-      <!-- Use Formspree or Netlify Forms. Replace action as needed -->
-      <form id="contactForm" action="https://formspree.io/f/your-form-endpoint" method="POST">
-        <label>Full name<input name="name" required></label>
-        <label>Email<input name="email" type="email"></label>
-        <label>Phone<input name="phone" required></label>
-        <label>Message<textarea name="message" rows="4"></textarea></label>
-        <button class="btn" type="submit">Send Message</button>
-      </form>
+      <h4>Contact Information</h4>
+      <p class="muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</p>
+      <p class="muted">Phone: <a href="tel:+91-8606132128">+91-8606132128</a></p>
+      <h4 style="margin-top:12px">Hours</h4>
+      <p class="muted">Mon–Sat 09:00–18:00</p>
+      <h4 style="margin-top:12px">Note</h4>
+      <p class="muted">We service kitchen appliances, CCTV systems, water purifiers and inverters. We <strong>do not</strong> repair ACs, TVs, refrigerators or computers.</p>
     </div>
     <aside class="card">
-      <h4>Our address</h4>
-      <p>B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</p>
-      <p>Phone: <a href="tel:+91-8606132128">+91-8606132128</a></p>
-      <div class="map-wrap" style="margin-top:8px"><iframe loading="lazy" src="https://www.google.com/maps?q=B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104&output=embed"></iframe></div>
+      <h4>Find Us</h4>
+      <div class="map-wrap"><iframe loading="lazy" src="https://www.google.com/maps?q=B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104&output=embed"></iframe></div>
     </aside>
   </div>
 </main>
-<div data-inject="footer"></div>
-<script src="nav.js"></script></body></html>
+
+<footer class="site-footer">
+  <div class="container footer-inner">
+    <div>© 2025 Oikos Tech Services</div>
+    <div class="muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104 • <a href="tel:+91-8606132128">+91-8606132128</a></div>
+  </div>
+</footer>
+
+</body></html>
