--- a/services.html
+++ b/services.html
@@ -1,16 +1,47 @@
-<!doctype html>
-<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Faber - Services</title><link rel="stylesheet" href="styles.css"></head><body>
-<div data-inject="header"></div>
-<main class="container">
-  <h2>Services</h2>
-  <p class="lead">We offer a range of repair and installation services for Faber appliances.</p>
-  <div class="grid" style="margin-top:12px;">
-    <article class="card"><h3>Chimney Repair</h3><p>Motor, filters, duct cleaning and parts replacement.</p><a href="/booking.html" class="btn">Book Chimney Service</a></article>
-    <article class="card"><h3>Gas Hob Service</h3><p>Ignition, gas checks, burner replacement.</p><a href="/booking.html" class="btn">Book Hob Service</a></article>
-    <article class="card"><h3>Water Heater</h3><p>Heating element, thermostat, leak inspection.</p><a href="/booking.html" class="btn">Book Heater Service</a></article>
-    <article class="card"><h3>Oven / Built-ins</h3><p>Sensor, electrical, hinge and door repairs.</p><a href="/booking.html" class="btn">Book Oven Service</a></article>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Services - Oikos Tech Services</title><link rel="stylesheet" href="styles.css"/></head><body>
+
+<header class="site-header">
+  <div class="container header-inner">
+    <div class="brand">
+      <a href="index.html"><img src="logo.png" alt="Oikos Tech logo" class="logo" /></a>
+      <div class="brand-text">
+        <h1>Oikos Tech Services</h1>
+        <p class="sub">Home appliance repairs & service</p>
+      </div>
+    </div>
+    <nav class="main-nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="book.html">Book</a>
+      <a href="feedback.html">Feedback</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <div class="header-actions">
+      <a class="call" href="tel:+91-8606132128">+91-8606132128</a>
+      <a class="btn" href="book.html">Book Service</a>
+    </div>
   </div>
+</header>
+
+<main class="container section">
+  <h2>Services We Provide</h2>
+  <p class="muted">We specialise in kitchen appliances and essential home systems. Below are our core services.</p>
+  <div class="services-grid" style="margin-top:12px">
+    <article class="card"><h4>Chimney Repair & Maintenance</h4><p class="muted">Motor replacement, duct cleaning, filter change, suction & sensor fixes.</p></article>
+    <article class="card"><h4>Induction & Gas Cooktops</h4><p class="muted">Induction cooker troubleshooting, gas hob/stove ignition and burner maintenance.</p></article>
+    <article class="card"><h4>CCTV Systems & Cameras</h4><p class="muted">Camera replacement, DVR/NVR support, wiring and remote access setup.</p></article>
+    <article class="card"><h4>Water Purifiers</h4><p class="muted">RO servicing, filter replacements, leakage and TDS checks.</p></article>
+    <article class="card"><h4>Inverters & Backup Power</h4><p class="muted">Inverter diagnostics, battery checks, wiring and commissioning.</p></article>
+  </div>
+  <p style="margin-top:16px">Note: We do <strong>not</strong> repair ACs, TVs, refrigerators, or computers.</p>
+  <p style="margin-top:12px"><a class="btn" href="book.html">Book a Technician</a> <a class="btn" href="https://forms.gle/MoZWDVAmF2wmEDCK8" target="_blank" style="background:#D9A441;color:#fff">Leave Feedback</a></p>
 </main>
-<div data-inject="footer"></div>
-<script src="nav.js"></script></body></html>
+
+<footer class="site-footer">
+  <div class="container footer-inner">
+    <div>© 2025 Oikos Tech Services</div>
+    <div class="muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104 • <a href="tel:+91-8606132128">+91-8606132128</a></div>
+  </div>
+</footer>
+
+</body></html>
