--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
         <p class="sub">Home appliance repairs & service</p>
       </div>
     </div>
-    <nav class="main-nav">
+    <nav class="main-nav" aria-label="Primary">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="book.html">Book</a>
@@ -33,8 +33,19 @@
     <article class="card"><h4>Water Purifiers</h4><p class="muted">RO servicing, filter replacements, leakage and TDS checks.</p></article>
     <article class="card"><h4>Inverters & Backup Power</h4><p class="muted">Inverter diagnostics, battery checks, wiring and commissioning.</p></article>
   </div>
+
+  <section style="margin-top:18px">
+    <h3>Services Gallery</h3>
+    <div class="gallery-grid">
+      <img src="assets/gallery1.jpg" alt="installation"/>
+      <img src="assets/gallery2.jpg" alt="repair"/>
+      <img src="assets/gallery3.jpg" alt="technician"/>
+      <img src="assets/gallery4.jpg" alt="parts"/>
+    </div>
+  </section>
+
   <p style="margin-top:16px">Note: We do <strong>not</strong> repair ACs, TVs, refrigerators, or computers.</p>
-  <p style="margin-top:12px"><a class="btn" href="book.html">Book a Technician</a> <a class="btn" href="https://forms.gle/MoZWDVAmF2wmEDCK8" target="_blank" style="background:#D9A441;color:#fff">Leave Feedback</a></p>
+  <p style="margin-top:12px"><a class="btn" href="book.html">Book a Technician</a> <a class="btn" href="https://forms.gle/MoZWDVAmF2wmEDCK8" target="_blank" style="background:var(--accent-gold);color:#fff">Leave Feedback</a></p>
 </main>
 
 <footer class="site-footer">
