--- a/technician.html
+++ b/technician.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Feedback - Oikos Tech Services</title><link rel="stylesheet" href="styles.css"/></head><body>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Technician ID Verification - Oikos Tech Services</title><link rel="stylesheet" href="styles.css"/></head><body>
 
 <header class="site-header">
   <div class="container header-inner">
@@ -24,13 +24,16 @@
 </header>
 
 <main class="container section">
-  <h2>Customer Feedback</h2>
-  <p class="muted">We value your experience. Click below to leave feedback about our service.</p>
-  <div class="card form-card" style="max-width:900px">
-    <h3>Share Your Feedback</h3>
-    <p class="small">Your feedback helps us improve. Submissions are private and reviewed by our team.</p>
-    <div style="margin-top:12px">
-      <a class="btn" href="https://forms.gle/MoZWDVAmF2wmEDCK8" target="_blank" style="background:var(--accent-gold);color:#fff">Open Feedback Form</a>
+  <h2>Technician ID Verification</h2>
+  <p class="muted">For your safety, always verify your technician before letting them into your home. Official Oikos Tech technicians carry an ID card with the company logo, their name, employee ID and a contact number.</p>
+  <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
+    <div class="card" style="min-width:260px">
+      <h4>What to ask</h4>
+      <ul class="small"><li>Technician name and employee ID</li><li>Show company ID card</li><li>Call our office number to verify the ID</li></ul>
+    </div>
+    <div class="card" style="min-width:260px">
+      <h4>Example ID</h4>
+      <p class="muted">The ID typically includes photo, name, ID and authorized signature. If unsure, call us.</p>
     </div>
   </div>
 </main>
