--- a/book.html
+++ b/book.html
@@ -9,7 +9,7 @@
         <p class="sub">Home appliance repairs & service</p>
       </div>
     </div>
-    <nav class="main-nav">
+    <nav class="main-nav" aria-label="Primary">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="book.html">Book</a>
@@ -26,13 +26,20 @@
 <main class="container section">
   <h2>Book a Technician</h2>
   <p class="muted">Click the button below to open our secure booking form. You may be required to sign in with Google to upload photos.</p>
-  <div class="card form-card" style="max-width:800px">
+  <div class="card form-card" style="max-width:900px">
     <h3>Online Service Booking</h3>
     <p class="small">Please provide details, preferred date and add photos if needed. Our team will contact you to confirm.</p>
     <div style="margin-top:12px">
       <a class="btn form-link" href="https://forms.gle/2g4Q3BgvCCnAi8x26" target="_blank">Open Booking Form</a>
       <a class="btn" href="tel:+91-8606132128" style="margin-left:8px;background:transparent;color:var(--primary-green);border:1px solid rgba(12,80,55,0.08)">Call Now</a>
     </div>
+    <hr style="margin:18px 0" />
+    <h4>Quick tips</h4>
+    <ul class="small">
+      <li>Provide clear photos of the appliance and issue.</li>
+      <li>List the appliance model and purchase year if available.</li>
+      <li>Choose a preferred date and contact window.</li>
+    </ul>
   </div>
 </main>
 
