--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         <p class="sub">Home appliance repairs & service</p>
       </div>
     </div>
-    <nav class="main-nav">
+    <nav class="main-nav" aria-label="Primary">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="book.html">Book</a>
@@ -25,7 +25,7 @@
 
 <main class="container section">
   <h2>Contact & Location</h2>
-  <div style="display:grid;grid-template-columns:1fr 360px;gap:18px;align-items:start">
+  <div style="display:grid;grid-template-columns:1fr 420px;gap:18px;align-items:start">
     <div class="card">
       <h4>Contact Information</h4>
       <p class="muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</p>
