--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="sub">Home appliance repairs & service</p>
       </div>
     </div>
-    <nav class="main-nav">
+    <nav class="main-nav" aria-label="Primary">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
       <a href="book.html">Book</a>
@@ -32,15 +32,16 @@
   </div>
 </header>
 
+
 <main>
   <section class="hero container hero-inner">
     <div class="hero-copy">
       <p class="eyebrow">Premium Appliance Service</p>
       <h2>Expert Care for Kitchen Appliances &amp; Home Power Systems</h2>
       <p class="lead">Oikos Tech provides specialized repair and maintenance for kitchen appliances (chimneys, induction cookers, gas hobs, gas stoves), CCTV systems, water purifiers, and inverters. We do not service ACs, TVs, refrigerators, or computers. Our trained technicians deliver reliable repairs, genuine parts, clear estimates and warranty-backed service.</p>
-      <div style="margin-top:12px" class="cta-row">
+      <div class="cta-row">
         <a class="btn" href="book.html">Book a Technician</a>
-        <a class="btn" href="contact.html" style="background:transparent;color:var(--primary-green);border:1px solid rgba(12,80,55,0.08);margin-left:10px">Contact Us</a>
+        <a class="btn" href="contact.html" style="background:transparent;color:var(--primary-green);border:1px solid rgba(12,80,55,0.08)">Contact Us</a>
       </div>
       <ul class="trust-list" style="margin-top:16px">
         <li>Genuine parts & transparent pricing</li>
@@ -72,13 +73,48 @@
     </div>
   </section>
 
+  <section class="section container">
+    <h3>Gallery</h3>
+    <p class="muted">Real photos from our jobs and installations.</p>
+    <div class="gallery-grid">
+      <img src="assets/gallery1.jpg" alt="gallery1"/>
+      <img src="assets/gallery2.jpg" alt="gallery2"/>
+      <img src="assets/gallery3.jpg" alt="gallery3"/>
+      <img src="assets/gallery4.jpg" alt="gallery4"/>
+    </div>
+  </section>
+
   <section class="section container card">
-    <h3>How We Work</h3>
-    <div class="kv" style="margin-top:12px">
-      <div class="item"><strong>1.</strong> Book online or call</div>
-      <div class="item"><strong>2.</strong> Technician visit & diagnosis</div>
-      <div class="item"><strong>3.</strong> Repair with genuine parts</div>
-      <div class="item"><strong>4.</strong> Invoice & warranty</div>
+    <h3>Customer Testimonials</h3>
+    <div class="testimonials">
+      <div class="testimonial"><strong>Priya R.</strong><p class="muted">"Excellent service — technician was professional and fixed our chimney quickly."</p></div>
+      <div class="testimonial"><strong>Amit T.</strong><p class="muted">"Very transparent pricing and timely visit. Highly recommend Oikos Tech."</p></div>
+      <div class="testimonial"><strong>Leena P.</strong><p class="muted">"Friendly staff and great installation work for our water purifier."</p></div>
+    </div>
+  </section>
+
+  <section class="section container">
+    <h3>Frequently Asked Questions</h3>
+    <div class="faq-item">
+      <div class="faq-q"><span>Do you repair refrigerators and ACs?</span><span>+</span></div>
+      <div class="faq-a">No. We do not repair ACs, refrigerators, televisions or computers. We specialize in kitchen appliances, CCTVs, water purifiers and inverters.</div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-q"><span>How do I book a service?</span><span>+</span></div>
+      <div class="faq-a">Click "Book a Technician" or use the booking button — the form will open in a new tab. Provide details and we will contact you to confirm.</div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-q"><span>Do you provide warranty on parts?</span><span>+</span></div>
+      <div class="faq-a">Yes — we provide warranty on genuine parts replaced, specific terms depend on the part and manufacturer.</div>
+    </div>
+  </section>
+
+  <section class="section container card">
+    <h3>Technician ID Verification</h3>
+    <p class="muted">For your safety, our technicians carry official Oikos Tech ID cards. Please verify ID before allowing entry.</p>
+    <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
+      <div class="card" style="min-width:220px"><h4>ID Card Example</h4><p class="muted">Technician name, photo, employee ID and contact number will be visible.</p></div>
+      <div class="card" style="min-width:220px"><h4>How to verify</h4><p class="muted">Ask to see the printed ID and confirm the employee name & ID on our website by calling our office number.</p></div>
     </div>
   </section>
 
@@ -87,11 +123,13 @@
     <div style="display:flex;gap:12px;flex-wrap:wrap">
       <a class="btn form-link" href="https://forms.gle/2g4Q3BgvCCnAi8x26" target="_blank">Open Booking Form</a>
       <a class="btn" href="services.html">View Services</a>
-      <a class="btn" href="https://forms.gle/MoZWDVAmF2wmEDCK8" target="_blank" style="background:#D9A441;color:#fff">Leave Feedback</a>
+      <a class="btn" href="https://forms.gle/MoZWDVAmF2wmEDCK8" target="_blank" style="background:var(--accent-gold);color:#fff">Leave Feedback</a>
       <a class="btn" href="contact.html" style="background:transparent;color:var(--primary-green);border:1px solid rgba(12,80,55,0.08)">Location & Contact</a>
     </div>
   </section>
+
 </main>
+
 
 <footer class="site-footer">
   <div class="container footer-inner">
@@ -99,6 +137,11 @@
     <div class="muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104 • <a href="tel:+91-8606132128">+91-8606132128</a></div>
   </div>
 </footer>
+
+
+<!-- Floating buttons -->
+<a class="fab-call" href="tel:+91-8606132128" title="Call now" aria-label="Call now">📞</a>
+<a class="fab-wa" href="https://wa.me/918606132128" target="_blank" title="WhatsApp" aria-label="WhatsApp chat">💬</a>
 
 <script src="scripts.js"></script>
 </body>
