--- a/book.html
+++ b/book.html
@@ -25,7 +25,7 @@
 
 <main class="container section">
   <h2>Book a Technician</h2>
-  <p class="muted">Click the button below to open our secure booking form. You may be required to sign in with Google to upload photos.</p>
+  <p class="small muted">Click the button below to open our secure booking form. You may be required to sign in with Google to upload photos.</p>
   <div class="card form-card" style="max-width:900px">
     <h3>Online Service Booking</h3>
     <p class="small">Please provide details, preferred date and add photos if needed. Our team will contact you to confirm.</p>
