--- a/contact.html
+++ b/contact.html
@@ -28,18 +28,27 @@
   <div style="display:grid;grid-template-columns:1fr 420px;gap:18px;align-items:start">
     <div class="card">
       <h4>Contact Information</h4>
-      <p class="muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</p>
-      <p class="muted">Phone: <a href="tel:+91-8606132128">+91-8606132128</a></p>
+      <p class="small muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</p>
+      <p class="small muted">Phone: <a href="tel:+91-8606132128">+91-8606132128</a></p>
       <h4 style="margin-top:12px">Hours</h4>
-      <p class="muted">Mon–Sat 09:00–18:00</p>
+      <p class="small muted">Mon–Sat 09:00–18:00</p>
       <h4 style="margin-top:12px">Note</h4>
-      <p class="muted">We service kitchen appliances, CCTV systems, water purifiers and inverters. We <strong>do not</strong> repair ACs, TVs, refrigerators or computers.</p>
+      <p class="small muted">We service kitchen appliances, CCTV systems, water purifiers and inverters. We <strong>do not</strong> repair ACs, TVs, refrigerators or computers.</p>
     </div>
     <aside class="card">
       <h4>Find Us</h4>
       <div class="map-wrap"><iframe loading="lazy" src="https://www.google.com/maps?q=B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104&output=embed"></iframe></div>
     </aside>
   </div>
+
+  <!-- Moved quick contact block here -->
+  <div style="margin-top:18px" class="card">
+    <h4>Quick Contact</h4>
+    <p class="small"><strong>+91-8606132128</strong></p>
+    <p class="small muted">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</p>
+    <div style="margin-top:10px"><a class="btn" href="tel:+91-8606132128">Call Now</a> <a class="btn" href="book.html" style="margin-left:8px">Book</a></div>
+  </div>
+
 </main>
 
 <footer class="site-footer">
