--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Oikos Tech Services — Expert Care for Kitchen Appliances &amp; Home Power Systems</title>
-  <meta name="description" content="Oikos Tech provides specialized repair and maintenance for kitchen appliances (chimneys, induction cookers, gas hobs, gas stoves), CCTV systems, water purifiers, and inverters. We do not service ACs, TVs, refrigerators, or computers. Our trained technicians deliver reliable repairs, genuine parts, clear estimates and warranty-backed service." />
-  <link rel="stylesheet" href="styles.css" />
-</head>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Oikos Tech Services — Expert Care for Kitchen Appliances &amp; Home Power Systems</title><meta name="description" content="Oikos Tech provides specialized repair and maintenance for kitchen appliances (chimneys, induction cookers, gas hobs, gas stoves), CCTV systems, water purifiers, and inverters. We do not service ACs, TVs, refrigerators, or computers. Our trained technicians deliver reliable repairs, genuine parts, clear estimates and warranty-backed service."/><link rel="stylesheet" href="styles.css"/></head>
 <body>
 
 <header class="site-header">
@@ -32,7 +26,6 @@
   </div>
 </header>
 
-
 <main>
   <section class="hero container hero-inner">
     <div class="hero-copy">
@@ -49,38 +42,27 @@
         <li>Parts warranty & service guarantee</li>
       </ul>
     </div>
+    
+<aside class="hero-card card">
+  <h3>Why Choose Oikos Tech</h3>
+  <ul class="small">
+    <li>Expert technicians with appliance-specific training</li>
+    <li>Transparent pricing & genuine parts</li>
+    <li>Fast response and clear communication</li>
+  </ul>
+  <div style="margin-top:12px"><a class="btn" href="book.html">Book a Technician</a></div>
+</aside>
 
-    <aside class="hero-card card form-card">
-      <h3>Quick Contact</h3>
-      <p style="margin:6px 0"><strong>+91-8606132128</strong></p>
-      <p class="small muted" style="margin:6px 0">B3, Gems Apartments, near Jyothis Public School, Moonu Mukku, Attingal, Kerala 695104</p>
-      <div style="margin-top:10px">
-        <a class="btn" href="tel:+91-8606132128">Call Now</a>
-        <a class="btn" href="book.html" style="margin-left:8px">Book</a>
-      </div>
-      <p class="small" style="margin-top:10px">We service kitchen appliances, CCTV, water purifiers & inverters. We do not service ACs, TVs, fridges or computers.</p>
-    </aside>
   </section>
 
   <section class="section container">
     <h3>Services We Offer</h3>
     <div class="services-grid">
-      <div class="card"><h4>Chimney Repair & Maintenance</h4><p class="muted">Motor replacement, filter change, suction and vent fixes.</p></div>
-      <div class="card"><h4>Induction & Gas Cooktops</h4><p class="muted">Induction cooker repair, gas hob and gas stove service and installation.</p></div>
-      <div class="card"><h4>CCTV Systems</h4><p class="muted">CCTV installation, DVR/NVR troubleshooting and camera replacement.</p></div>
-      <div class="card"><h4>Water Purifiers</h4><p class="muted">Filter replacement, RO service, leakage & water quality checks.</p></div>
-      <div class="card"><h4>Inverters & Power Systems</h4><p class="muted">Inverter diagnostics, battery checks and maintenance.</p></div>
-    </div>
-  </section>
-
-  <section class="section container">
-    <h3>Gallery</h3>
-    <p class="muted">Real photos from our jobs and installations.</p>
-    <div class="gallery-grid">
-      <img src="assets/gallery1.jpg" alt="gallery1"/>
-      <img src="assets/gallery2.jpg" alt="gallery2"/>
-      <img src="assets/gallery3.jpg" alt="gallery3"/>
-      <img src="assets/gallery4.jpg" alt="gallery4"/>
+      <div class="card"><h4><svg class="icon icon--green" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 13h2v6h14v-6h2v8H3v-8zM7 3h10v6H7V3zm12 0h2v6h-2V3z"/></svg>Chimney Repair & Maintenance</h4><p class="small">Motor replacement, filter change, suction and vent fixes.</p></div>
+      <div class="card"><h4><svg class="icon icon--gold" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a9 9 0 100 18 9 9 0 000-18zm1 5h2v6h-2V7zM7 9h2v4H7V9z"/></svg>Induction & Gas Cooktops</h4><p class="small">Induction cooker repair, gas hob and gas stove service and installation.</p></div>
+      <div class="card"><h4><svg class="icon icon--green" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 7a5 5 0 100 10 5 5 0 000-10zM2 6v12h20V6H2z"/></svg>CCTV Systems</h4><p class="small">CCTV installation, DVR/NVR troubleshooting and camera replacement.</p></div>
+      <div class="card"><h4><svg class="icon icon--gold" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8 6 6 8.5 6 11a6 6 0 0012 0c0-2.5-2-5-6-9z"/></svg>Water Purifiers</h4><p class="small">Filter replacement, RO service, leakage & water quality checks.</p></div>
+      <div class="card"><h4>Inverters & Power Systems</h4><p class="small">Inverter diagnostics, battery checks and maintenance.</p></div>
     </div>
   </section>
 
@@ -109,15 +91,6 @@
     </div>
   </section>
 
-  <section class="section container card">
-    <h3>Technician ID Verification</h3>
-    <p class="muted">For your safety, our technicians carry official Oikos Tech ID cards. Please verify ID before allowing entry.</p>
-    <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
-      <div class="card" style="min-width:220px"><h4>ID Card Example</h4><p class="muted">Technician name, photo, employee ID and contact number will be visible.</p></div>
-      <div class="card" style="min-width:220px"><h4>How to verify</h4><p class="muted">Ask to see the printed ID and confirm the employee name & ID on our website by calling our office number.</p></div>
-    </div>
-  </section>
-
   <section class="section container">
     <h3>Customer Actions</h3>
     <div style="display:flex;gap:12px;flex-wrap:wrap">
@@ -130,7 +103,6 @@
 
 </main>
 
-
 <footer class="site-footer">
   <div class="container footer-inner">
     <div>© 2025 Oikos Tech Services</div>
@@ -138,11 +110,7 @@
   </div>
 </footer>
 
-
-<!-- Floating buttons -->
 <a class="fab-call" href="tel:+91-8606132128" title="Call now" aria-label="Call now">📞</a>
 <a class="fab-wa" href="https://wa.me/918606132128" target="_blank" title="WhatsApp" aria-label="WhatsApp chat">💬</a>
-
 <script src="scripts.js"></script>
-</body>
-</html>
+</body></html>
