--- a/feedback.html
+++ b/feedback.html
@@ -25,7 +25,7 @@
 
 <main class="container section">
   <h2>Customer Feedback</h2>
-  <p class="muted">We value your experience. Click below to leave feedback about our service.</p>
+  <p class="small muted">We value your experience. Click below to leave feedback about our service.</p>
   <div class="card form-card" style="max-width:900px">
     <h3>Share Your Feedback</h3>
     <p class="small">Your feedback helps us improve. Submissions are private and reviewed by our team.</p>
