--- a/services.html
+++ b/services.html
@@ -27,11 +27,11 @@
   <h2>Services We Provide</h2>
   <p class="small muted">We specialise in kitchen appliances and essential home systems. Below are our core services.</p>
   <div class="services-grid" style="margin-top:12px">
-    <article class="card"><h4><svg class="icon icon--green" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 13h2v6h14v-6h2v8H3v-8zM7 3h10v6H7V3zm12 0h2v6h-2V3z"/></svg>Chimney Repair & Maintenance</h4><p class="small">Motor replacement, duct cleaning, filter change, suction & sensor fixes.</p></article>
-    <article class="card"><h4><svg class="icon icon--gold" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a9 9 0 100 18 9 9 0 000-18zm1 5h2v6h-2V7zM7 9h2v4H7V9z"/></svg>Induction & Gas Cooktops</h4><p class="small">Induction cooker troubleshooting, gas hob/stove ignition and burner maintenance.</p></article>
-    <article class="card"><h4><svg class="icon icon--green" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 7a5 5 0 100 10 5 5 0 000-10zM2 6v12h20V6H2z"/></svg>CCTV Systems & Cameras</h4><p class="small">Camera replacement, DVR/NVR support, wiring and remote access setup.</p></article>
-    <article class="card"><h4><svg class="icon icon--gold" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8 6 6 8.5 6 11a6 6 0 0012 0c0-2.5-2-5-6-9z"/></svg>Water Purifiers</h4><p class="small">RO servicing, filter replacements, leakage and TDS checks.</p></article>
-    <article class="card"><h4><svg class="icon icon--green" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2L2 12h5v8h10v-8h5L12 2z"/></svg>Inverters & Backup Power</h4><p class="small">Inverter diagnostics, battery checks, wiring and commissioning.</p></article>
+    <article class="card"><h4>Chimney Repair & Maintenance</h4><p class="small">Motor replacement, duct cleaning, filter change, suction & sensor fixes.</p></article>
+    <article class="card"><h4>Induction & Gas Cooktops</h4><p class="small">Induction cooker troubleshooting, gas hob/stove ignition and burner maintenance.</p></article>
+    <article class="card"><h4>CCTV Systems & Cameras</h4><p class="small">Camera replacement, DVR/NVR support, wiring and remote access setup.</p></article>
+    <article class="card"><h4>Water Purifiers</h4><p class="small">RO servicing, filter replacements, leakage and TDS checks.</p></article>
+    <article class="card"><h4>Inverters & Backup Power</h4><p class="small">Inverter diagnostics, battery checks, wiring and commissioning.</p></article>
   </div>
 
   <p style="margin-top:16px">Note: We do <strong>not</strong> repair ACs, TVs, refrigerators, or computers.</p>
